# h4sg25_cdl_challenge

./: .gitignore  Notes.md  README.md  exploration.ipynb  hello.py  matching_npo_info.ipynb  pyproject.toml  requirements.txt  sampling.ipynb
data/: .~lock.Digitalhaushalt_Open_Data.xlsx#  Demokratische Finanzierung vom Bund.xlsx  ZER-Förderung des demokratischen Staatswesens-20250404.csv  sample.csv
helpers/: __init__.py
spacy/: main.ipynb
tests/: test_matching.py
